# file_compressor

./: Cargo.toml  README.md  out-decoded.txt  out.txt
src/: bitreader.rs  bitwriter.rs  charmap.rs  fileops.rs  fnv.rs  heap.rs  huffman.rs  io.rs  lzss.rs  main.rs  map.rs  node.rs  tests.rs
src/ui/: mod.rs  tui.rs  ui.rs
