[package]
name = "file_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.23.0"
circular-buffer = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
itertools = "0.11.0"
num_cpus = "1.0"
concat_strs = "1.0.2"
